# bevy_game

./: .gitignore  Cargo.toml  README.md
assets/: newtile.ldtk  test.ldtk  test2.ldtk
src/: component.rs  main.rs  system.rs  systems.rs
