[package]
name = "bevy_game_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iyes_perf_ui = "0.2.3"
bevy-inspector-egui = "=0.23.4"
bevy_ecs_ldtk = { git = "https://github.com/theshortcut/bevy_ecs_ldtk/", branch = "bevy-0.13" }

[dependencies.bevy]
version = "0.13.0"

# Disable all Bevy default features
default-features = false

# Enable bevy features
features = [
    # Bevy functionality:
    "multi-threaded",
    "bevy_winit",
    "bevy_asset",
    "bevy_sprite",
    "bevy_core_pipeline",
    "bevy_animation",
    "bevy_text",
    "bevy_ui",            
    "default_font",
    "file_watcher",

    # Bevy formats:
    "png",

    # Development/Debug features:
    "dynamic_linking",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }